# football_analysis

./: .gitignore  README.md  createvenv.md  main.py  pyproject.toml  yolo_inference.py
camera_movement_estimator/: camera_movement_estimator.py
development_and_analysis/: color_assignment.ipynb
player_ball_assigner/: player_ball_assigner.py
speed_and_distance_estimator/: speed_and_distance_estimator.py
stubs/: camera_movement.pkl  track_stubs.pkl
team_assigner/: __init__.py  team_assigner.py
trackers/: tracker.py
training/: football_training_yolo_v5.ipynb
utils/: bbox_utils.py  video_utils.py
view_transformer/: view_transformer.py
