[tool.poetry]
name = "football-analysis"
version = "0.1.0"
description = "football analysis computer vision project"
authors = ["nicolas torres <novenixn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
ultralytics = "^8.2.90"
roboflow = "^1.1.44"
opencv-python = "^4.10.0.84"
supervision = "^0.23.0"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
